<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_moods"
        android:icon="@drawable/ic_baseline_dashboard_24"
        android:title="@string/title_moods" />

    <item
        android:id="@+id/navigation_add_mood"
        android:icon="@drawable/ic_baseline_add_reaction_24"
        android:title="@string/title_addMood" />

    <item
        android:id="@+id/navigation_statistics"
        android:icon="@drawable/ic_baseline_auto_graph_24"
        android:title="@string/title_statistics" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notifications" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile" />

</menu>