<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10sp"
    tools:context=".fragments.mood.MoodFragment">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10sp"
    tools:context=".fragments.mood.MoodFragment">

    <TextView
        android:id="@+id/ratingTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_your_mood"
        app:layout_constraintTop_toTopOf="parent" />

    <com.wb.moodtracker.fragments.addMood.CustomRatingBar
        android:id="@+id/customRatingBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/ratingTextView"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"  />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttons"
        app:layout_constraintTop_toBottomOf="@id/customRatingBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_mood" />
        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_mood"
            />
    </LinearLayout>


    <TextView
        android:id="@+id/descriptionTextViewNonEditable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@+id/checkbox_show_personal_details" />

    <CheckBox
        android:id="@+id/checkbox_show_personal_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/additional_description"
        app:layout_constraintTop_toBottomOf="@id/buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/descriptionInput"
        android:layout_width="0dp"
        android:layout_height="70sp"
        android:visibility="gone"
        android:hint="@string/enter_description"
        app:layout_constraintTop_toBottomOf="@id/checkbox_show_personal_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/createDateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/create_date"
        app:layout_constraintTop_toBottomOf="@id/descriptionInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/checkbox_show_symptoms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/i_noticed_disturbing_symptoms"
        app:layout_constraintTop_toBottomOf="@id/createDateTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSymptoms"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox_show_symptoms"
        tools:listitem="@layout/list_item_symptom" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>