<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_centerVertical="true"
    android:layout_marginTop="120dp">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:layout_height="120dp"
        android:padding="16dp"
        android:id="@+id/imageViewAccountImage"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:id="@+id/emailTextview"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:paddingLeft="16dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailed_name"
        android:id="@+id/detailedTextview"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:paddingLeft="16dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:id="@+id/userTextview"
        android:textSize="16sp"
        android:paddingLeft="16dp"
        android:textColor="@android:color/black"/>



</LinearLayout>
