<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_moods">

    <fragment
        android:id="@+id/navigation_moods"
        android:name="com.wb.moodtracker.fragments.mood.MoodFragment">

        <action
            android:id="@+id/action_navigation_moods_to_navigation_add_mood"
            app:destination="@id/navigation_add_mood"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:launchSingleTop="true"
            app:popUpTo="@id/navigation_moods"
            app:popUpToInclusive="true"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <argument
            android:name="SelectedMood"
            app:argType="com.wb.moodtracker.data.models.Mood"
            app:nullable="true" />
        <action
            android:id="@+id/action_navigation_moods_to_navigation_add_mood2"
            app:destination="@id/navigation_add_mood" />
    </fragment>


    <fragment
        android:id="@+id/navigation_add_mood"
        android:name="com.wb.moodtracker.fragments.addMood.AddMoodFragment"
        android:label="@string/title_addMood"
        tools:layout="@layout/fragment_add_moods">
        <argument
            android:name="SelectedMood"
            app:argType="com.wb.moodtracker.data.models.Mood"
            app:nullable="true" />
        <action
            android:id="@+id/action_navigation_add_mood_to_navigation_moods"
            app:destination="@id/navigation_moods"
            app:popUpTo="@id/navigation_moods"
            app:popUpToInclusive="false" />
    </fragment>



    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.wb.moodtracker.fragments.statistics.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" >
        <action
            android:id="@+id/action_navigation_statistics_to_navigation_moods"
            app:destination="@id/navigation_moods" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.wb.moodtracker.fragments.notifications.NotificationsFragment"
        android:label="@string/notifications_title"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_placeholder"
            app:destination="@id/placeholder" />
    </fragment>
    <fragment android:id="@+id/placeholder" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.wb.moodtracker.fragments.profile.ProfileFragment"
        android:label="@string/profile_title"
        tools:layout="@layout/fragment_profile" >
    </fragment>
</navigation>