<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.statistics.StatisticsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20sp">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButtonGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/btnYear"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year" />

            <Button
                android:id="@+id/btnMonth"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month" />

            <Button
                android:id="@+id/btnWeek"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <LinearLayout
            android:id="@+id/averageLayout"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/toggleButtonGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/averageImageview"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_baseline_add_reaction_24" />

            <TextView
                android:id="@+id/averageTextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/average_value"
                android:textStyle="bold"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/minLayout"
            android:layout_width="wrap_content"
            android:visibility="gone"

            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/averageLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/minImageview"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_baseline_minimum_24" />

            <TextView
                android:id="@+id/minTextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/minimum_value"
                android:textStyle="bold"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/maxLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/minLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/maxImageview"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_baseline_maximum_24" />

            <TextView
                android:id="@+id/maxTextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/maximum_value"
                android:textStyle="bold"
                android:layout_marginStart="8dp" />
        </LinearLayout>



        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lineChart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/maxLayout"
            app:layout_constraintBottom_toTopOf="@+id/barChart"
            app:layout_constraintDimensionRatio="1:1" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/barChart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lineChart"
            app:layout_constraintBottom_toTopOf="@+id/nav_view"
            app:layout_constraintDimensionRatio="1:1" />

        <!-- BottomNavigationView with constraints -->
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:menu="@menu/bottom_nav_menu" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
